--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ project(${PROJECT_NAME} VERSION ${VERSION_STRING})
 # It is important that the library is static in order to build its Python
 # wrapper
 find_package(FFTW3 CONFIG REQUIRED)
+find_package(OpenCL REQUIRED)
 
 add_library(${PROJECT_NAME} STATIC 
     src/${PROJECT_NAME}/myproject.cpp
@@ -60,6 +61,7 @@ target_include_directories(${PROJECT_NAME}
 target_link_libraries(${PROJECT_NAME} 
     PRIVATE
         FFTW3::fftw3
+        OpenCL::OpenCL
 )
 
 # ---------------------------- Build library tests ----------------------------
